Header spacing correction

--- a/_sass/website/_layout.scss
+++ b/_sass/website/_layout.scss
@@ -161,12 +161,10 @@ article {
   position: relative;
 }
 
-article:nth-child(odd) {
-}
-
 article.page-header {
   background-color: $grey25;
   padding-bottom: 0;
+  padding-top: 80px;
 }
 
 article:nth-child(2) {
